# SLAM2

./: .gitignore  CMakeLists.txt  README.md
src/assignment/UsingC11/: CMakeLists.txt  UsingC11.cpp
src/assignment/UsingDistorted/: CMakeLists.txt  UsingDistorted.cpp
src/assignment/UsingEigen/: CMakeLists.txt  UsingEigen.cpp
src/assignment/UsingEpipolar/: CMakeLists.txt  UsingEpipolar.cpp
src/assignment/UsingGeometry/: CMakeLists.txt  UsingGeometry.cpp
src/assignment/UsingHomography/: CMakeLists.txt  UsingHomography.cpp
src/assignment/UsingICP/: CMakeLists.txt  UsingICP.cpp
src/assignment/UsingInterpolation/: CMakeLists.txt  UsingInterpolation.cpp
src/assignment/UsingPointCloud/: CMakeLists.txt
src/assignment/UsingPointCloud/data/: cameraTrajectory.txt
src/assignment/UsingPointCloud/include/: slamBase.hpp
src/assignment/UsingPointCloud/lib/: libslambase_shared.dylib
src/assignment/UsingPointCloud/src/: CMakeLists.txt  pointCloudFusion.cpp  slamBase.cpp
src/assignment/UsingPointCloud2Mesh/: CMakeLists.txt
src/assignment/UsingPointCloud2Mesh/src/: CMakeLists.txt  pointCloud2Mesh.cpp
src/assignment/UsingPointCloudFilter/: CMakeLists.txt
src/assignment/UsingPointCloudFilter/src/: CMakeLists.txt  pointCloudFilter.cpp
src/assignment/UsingPointCloudSmooth/: CMakeLists.txt
src/assignment/UsingPointCloudSmooth/src/: CMakeLists.txt  pointCloud2Mesh.cpp
src/ch11/: CMakeLists.txt  feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
src/ch13/: CMakeLists.txt  README.md  make.sh
src/ch13/app/: CMakeLists.txt  run_kitti_stereo.cpp
src/ch13/include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
src/ch13/src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
src/ch13/test/: test_triangulation.cpp
src/ch3/plotTrajectory/: CMakeLists.txt  plotTrajectory.cpp
src/ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
src/ch4/trajectoryError/: CMakeLists.txt  trajectoryError.cpp
src/ch4/useSophus/: CMakeLists.txt  useSophus.cpp
src/ch5/joinMap/: CMakeLists.txt  joinMap.cpp
src/ch5/stereoVersion/: CMakeLists.txt  stereoVision.cpp
src/ch5/undistortImage/: CMakeLists.txt  undistortImage.cpp
src/ch7/orbCV/: CMakeLists.txt  orb_cv.cpp
src/ch7/orbSelf/: CMakeLists.txt  orb_self.cpp
src/ch7/poseEstimation2d2d/: CMakeLists.txt  pose_estimation_2d2d.cpp
src/ch7/poseEstimation3d2d/: CMakeLists.txt  pose_estimation_3d2d.cpp
src/ch7/poseEstimation3d3d/: CMakeLists.txt  pose_estimation_3d3d.cpp
src/ch7/triangulation/: CMakeLists.txt  triangulation.cpp
src/ch8/directMethod/: CMakeLists.txt  direct_method.cpp
src/ch8/opticalFlow/: CMakeLists.txt  optical_flow.cpp
